# fastapi-backend-api

./: .env.example  .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
app/: main.py
app/core/: config.py
app/db/: base.py  base_class.py  session.py
